<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_gradient"
        app:layout_constraintBottom_toTopOf="@+id/guideTop"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/poppins_semi_bold"
        android:includeFontPadding="false"
        android:text="@string/add_note"
        android:textColor="@color/common_text_color"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toTopOf="@id/guideTop"
        app:layout_constraintStart_toEndOf="@id/iv_arrow_back"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toTopOf="@id/guideTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_notes"
        android:layout_width="@dimen/_65sdp"
        android:layout_height="@dimen/_65sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="-27dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="@id/guideTop"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etNotesTitle"
        style="@style/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:hint="@string/enter_note_title"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/iv_notes" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etNotes"
        style="@style/editText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15ssp"
        android:gravity="top"
        android:hint="@string/enter_note_description"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@id/btnSave"
        app:layout_constraintTop_toBottomOf="@id/etNotesTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15ssp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/save"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNotes" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDelete"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15ssp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSave"
        app:layout_constraintTop_toBottomOf="@id/etNotes" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>